--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </div>
   </form>
   <div class="gallery"></div>
-  <button type="button" class="load-more is-hidden">Load more</button>
+  <button type="button" class="load-more">Load more</button>
   <script type="module" src="./index.js"></script>
 </body>
 
